Added K8 support and fixed bugs

--- a/Fac.Service/appsettings.json
+++ b/Fac.Service/appsettings.json
@@ -5,7 +5,7 @@
       "Serilog.Sinks.Seq"   
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Warning"
       }
@@ -32,9 +32,9 @@
     "TokenExpires": 60
   },
   "PubSub": {
-    "PubSubName": "FacService",
-    "FacSendMibTopic": "FacSendMib",
-    "FacCaseDecistionTopic": "FacCaseDecision",
-    "FacCaseSubmissionTopic": "FacCaseSubmission"
+    "PubSubName": "facservice",
+    "FacSendMibTopic": "facsendmib",
+    "FacCaseDecistionTopic": "faccasedecision",
+    "FacCaseSubmissionTopic": "faccasesubmission"
   }
 }
