--- a/Mib.Processor/appsettings.json
+++ b/Mib.Processor/appsettings.json
@@ -32,9 +32,9 @@
     "TokenExpires": 60
   },
   "PubSub": {    
-    "FacPubSub": "FacService",
-    "MibPubSub": "MibProcessor",
-    "FacSendMibTopic": "FacSendMib",
-    "MibCompletedTopic": "MibCompleted"
+    "FacPubSub": "facservice",
+    "MibPubSub": "mibprocessor",
+    "FacSendMibTopic": "facsendmib",
+    "MibCompletedTopic": "mibcompleted"
   }
 }
