--- a/MibHub.Processor/appsettings.json
+++ b/MibHub.Processor/appsettings.json
@@ -32,7 +32,7 @@
     "TokenExpires": 60
   },
   "PubSub": {
-    "MibPubSub": "MibProcessor",    
-    "MibCompletedTopic": "MibCompleted"
+    "MibPubSub": "mibprocessor",    
+    "MibCompletedTopic": "mibcompleted"
   }
 }
