--- a/components/mibprocessorpubsub.yaml
+++ b/components/mibprocessorpubsub.yaml
@@ -1,8 +1,8 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: MibProcessor
-  namespace: default
+  name: mibprocessor
+  namespace: daprpoc
 spec:
   type: pubsub.rabbitmq
   version: v1
