--- a/QueueTest/appsettings.json
+++ b/QueueTest/appsettings.json
@@ -5,7 +5,7 @@
       "Serilog.Sinks.Seq"   
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Warning"
       }
@@ -32,6 +32,6 @@
     "TokenExpires": 60
   },
   "PubSub": {
-    "PubSubName": "QueueTest"
+    "PubSubName": "queuetest"
   }
 }
