--- a/components/facservicepubsub.yaml
+++ b/components/facservicepubsub.yaml
@@ -1,8 +1,8 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: FacService
-  namespace: default
+  name: facservice
+  namespace: daprpoc
 spec:
   type: pubsub.rabbitmq
   version: v1
